--- a/src/css/playerCard.css
+++ b/src/css/playerCard.css
@@ -1,85 +1,118 @@
-.cardContainer {
+.cards {
     display: flex;
-    flex-wrap: wrap;
+}
+
+.cardPlayerPeak {
+    border: 3px solid black;
+    background-color: rgb(64, 64, 64);
+    border-radius: 8px;
+    width: 30%;
+    margin: 0 1%;
+}
+
+.peakImage {
+    padding: 0 10%;
+    display: flex;
     justify-content: center;
-    /* border: 2px solid black; */
+    align-items: center;
+    justify-content: space-between;
 }
 
 .cardPlayer {
-    width: 90%;
+    width: 70%;
     border: 3px solid black;
-    background: rgb(121, 121, 121);
-    margin: 10px;
+    background-color: rgb(64, 64, 64);
+    margin: 0 1%;
+    height: 100vh;
     border-radius: 8px;
 }
 
-.card {
+.gamertagContainer {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    border: 2px solid black;
-    width: 90%;
-    height: auto;
-    margin: 10px;
-    background: gray;
-    border-radius: 8px;
+    /* justify-content: space-evenly; */
+    justify-content: space-between;
     align-items: center;
-}
-
-.gamertag {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background: rgb(207, 176, 0);
-    padding: 2px 0;
+    padding: 4px 0;
     border-bottom: 3px solid black;
     border-radius: 5px 5px 0 0;
+    background-color: rgb(64, 64, 64);
 }
 
 .rankText {
     margin: 4px 0;
+    color: white;
+    padding: 0 5%;
 }
 
-.info {
-    display: flex;
-    background: rgb(204, 133, 0);
-    justify-content: space-evenly;
+.peakText {
+    color: white;
+    padding: 0 10%;
+}
+
+.infoContainer {
+    justify-content: space-between;
     border-bottom: 2px solid black;
     align-items: center;
+    margin: 0;
 }
 
 .infoTextGroup {
-    margin: 2px;
+    margin: 4px 0;
+    color: white;
+    padding: 0 10%;
 }
 
-.tierCard {
-    width: 65px;
-    margin: 2px;
+.tierCardImage {
+    width: 68px;
 }
- 
+
 .infoText {
     margin: 4px;
 }
 
-.Stats {
+.statsContainerRank {
     display: flex;
-    justify-content: space-evenly;
+    padding: 12px;
+    align-items: center;
 }
-.Stats2 {
+
+.statsContainer {
     display: flex;
     justify-content: space-evenly;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+    padding: 4px 0;
 }
-.Stats3 {
+
+.statMain {
     display: flex;
-    justify-content: space-evenly;
-    border-bottom: 2px solid black;
+    flex-direction: column;
+    background-color: rgb(84, 84, 84);
+    border-radius: 5px;
+    width: 22%;
+    padding: 3px 0;
+    margin: 0;
+}
+
+.stat {
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    width: 23%;
+    margin: 0 5px;
+}
+
+.stat:hover {
+    background-color: rgb(84, 84, 84);
+    cursor: pointer;
 }
 
 .textStats {
-    color: black;
+    color: rgb(210, 210, 210);
     margin: 4px;
+}
+
+.textStatsBold {
+    color: white;
+    font-weight: bold;
 }
 
 h6 {
@@ -105,8 +138,8 @@ h6 {
 }
 
 .searchtext {
+    color: white;
     padding: 8px 0 8px 0;
-
 }
 
 .Input {
@@ -115,4 +148,88 @@ h6 {
     border: 1px solid black;
     border-radius: 5px;
     height: 15px;
+}
+
+/* //////////RESPONSIVE ////////////////////////////////////////// */
+/* ///////////////////////////////////////////////////////////// */
+@media only screen and (max-width: 425px) {
+    .cards {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cardPlayerPeak {
+        border: 3px solid black;
+        background-color: rgb(64, 64, 64);
+        border-radius: 8px;
+        width: 90%;
+        margin: 2% 1%;
+    }
+
+    .peakImage {
+        padding: 0 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .cardPlayer {
+        width: 90%;
+        border: 3px solid black;
+        background-color: rgb(64, 64, 64);
+        margin: 0 1%;
+        height: auto;
+        border-radius: 8px;
+    }
+
+    .statsContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .statMain {
+        display: flex;
+        flex-direction: column;
+        background-color: rgb(84, 84, 84);
+        border-radius: 5px;
+        width: 90%;
+        margin: 4px;
+    }
+    
+    .stat {
+        display: flex;
+        flex-direction: column;
+        border-radius: 5px;
+        width: 90%;
+        margin: 4px 5px;
+    }
+
+
+
+    /*////////////////// SEARCH BAR ///////////////////////////////////////*/
+
+    .Searchbar {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .searchtext {
+        color: white;
+        padding: 0;
+        margin-top: 12px;
+        margin-bottom: 0;
+    }
+
+    .Input {
+        margin: 20px;
+        padding: 12px;
+        border: 1px solid black;
+        border-radius: 5px;
+        height: 15px;
+    }
+
 }
