--- a/src/css/playerCard.css
+++ b/src/css/playerCard.css
@@ -3,7 +3,6 @@
 }
 
 .cardPlayerPeak {
-    border: 3px solid black;
     background-color: rgb(64, 64, 64);
     border-radius: 8px;
     width: 30%;
@@ -20,7 +19,6 @@
 
 .cardPlayer {
     width: 70%;
-    border: 3px solid black;
     background-color: rgb(64, 64, 64);
     margin: 0 1%;
     /* height: 100vh; */
@@ -63,18 +61,33 @@
 }
 
 .tierCardImage {
-    width: 68px;
+    width: 80px;
 }
 
 .infoText {
     margin: 4px;
 }
 
+/* CURRENT RANK CSS //////////////////////////////////////// */
 .statsContainerRank {
-    display: flex;
-    padding: 12px;
+    /* display: flex; */
+    padding: 5px;
     align-items: center;
 }
+
+/* RANK IMAGE CONTAINER ////////////*/
+.rankImageContainer {
+    display: flex;
+    align-items: center;
+    /* justify-content: space-evenly; */
+}
+
+.section1 {
+    display: flex;
+    align-items: center;
+    margin-right: 50px;
+}
+/* ////////////////////////////////////////////////////////// */
 
 .statsContainer {
     display: flex;
@@ -120,14 +133,14 @@
     cursor: pointer;
 }
 
+.textStatsContainerA {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .textStatsContainer {
     display: flex;
     flex-direction: column;
-}
-
-.textStatsContainer2 {
-    display: flex;
-    justify-content: space-evenly;
 }
 
 .textStats {
@@ -138,6 +151,11 @@
     display: flex;
     color: white;
 }
+.textTier {
+     margin: 4px;
+     display: flex;
+     color: white;
+}
 
 .textStatsBold {
     color: white;
@@ -147,9 +165,11 @@
     font-size: 20px;
     color: white;
     font-weight: bold;
+    margin-top: 5px;
 }
 
 .textStatsBoldSmall {
+    padding: 3px 0;
     font-size: 10px;
     color: white;
     font-weight: bold;
@@ -169,12 +189,31 @@ h6 {
     margin-top: -15px;
 }
 
-
-
-.test {
-    display: flex;
+/* PROGRESS BAR STATIC ///////////////////// */
+.progressBarContainer {
+    margin-top: 12px;
+    width: 100%;
+    background-color: rgb(64, 64, 64);
+    border-radius: 4px;
 }
-
+.progressBarFill {
+    background-color: rgb(140, 140, 140);
+    border-radius: 5px;
+}
+.progressKills {
+    margin-bottom: 5px;
+    height: 12px;
+    width: 24px;
+    background-color: rgb(64, 64, 64);
+    border-radius: 5px;
+}
+.progressHeadShots {
+    margin-top: 5px;
+    height: 12px;
+    width: 24px;
+    background-color: rgb(140, 140, 140);
+    border-radius: 5px;
+}
 
 /*////////////////// SEARCH BAR ///////////////////////////////////////*/
 .searchtext {
