--- a/src/css/playerCard.css
+++ b/src/css/playerCard.css
@@ -49,7 +49,7 @@
 
 .infoContainer {
     justify-content: space-between;
-    border-bottom: 2px solid black;
+    border-top: 3px solid black;
     align-items: center;
     margin: 0;
 }
@@ -98,7 +98,7 @@
 .statsContainer2 {
     display: flex;
     justify-content: space-evenly;
-    padding: 4px 0;
+    padding: 12px 0;
 }
 .stat2 {
     display: flex;
