--- a/src/css/playerCard.css
+++ b/src/css/playerCard.css
@@ -1,4 +1,4 @@
-.playerCard {
+.playerCardContainer {
     display: flex;
 }
 
@@ -9,11 +9,17 @@
     text-decoration: underline 2px;
 }
 
-.cardPlayerPeak {
+.cardSection1 {
     background-color: rgb(64, 64, 64);
     border-radius: 8px;
     width: 30%;
     height: 180px;
+    margin: 0 1%;
+}
+
+.cardSection2 {
+    /* background-color: rgb(64, 64, 64); */
+    width: 80%;
     margin: 0 1%;
 }
 
@@ -25,13 +31,13 @@
     justify-content: space-between;
 }
 
-.cardPlayer {
+/* .cardPlayer {
     width: 70%;
     background-color: rgb(64, 64, 64);
     margin: 0 1%;
-    /* height: 100vh; */
+    height: 100vh;
     border-radius: 8px;
-}
+} */
 
 .gamertagContainer {
     display: flex;
@@ -57,9 +63,10 @@
 
 .infoContainer {
     justify-content: space-between;
-    border-top: 3px solid black;
     align-items: center;
     margin: 0;
+    background-color: rgb(64, 64, 64);
+    border-radius: 5px 5px 0 0;
 }
 
 .infoTextGroup {
@@ -76,9 +83,13 @@
     margin: 4px;
 }
 
+.statsContainer {
+    background-color: rgb(64, 64, 64);
+    border-radius: 5px;
+}
+
 /* CURRENT RANK CSS //////////////////////////////////////// */
 .statsContainerRank {
-    /* display: flex; */
     padding: 5px;
     align-items: center;
 }
@@ -95,13 +106,15 @@
     align-items: center;
     margin-right: 50px;
 }
+
 /* // 4 Box Items at top.//////////////////////////////////////////////////////// */
 
-.statsContainer {
+.statsSection1 {
     display: flex;
     justify-content: space-evenly;
     padding: 4px 0;
 }
+
 .statsContainerB {
     display: flex;
     width: 50%;
@@ -121,8 +134,12 @@
 .statsContainer2 {
     display: flex;
     justify-content: space-evenly;
+    background-color: rgb(64, 64, 64);
     padding: 12px 0;
+    margin: 10px 0;
+    border-radius: 5px;
 }
+
 .statsContainer2B {
     display: flex;
     flex-direction: column;
@@ -170,20 +187,23 @@
     color: rgb(210, 210, 210);
     margin: 4px;
 }
+
 .textStats2 {
     display: flex;
     color: white;
 }
+
 .textTier {
-     margin: 1%;
-     display: flex;
-     color: white;
+    margin: 1%;
+    display: flex;
+    color: white;
 }
 
 .textStatsBold {
     color: white;
     font-weight: bold;
 }
+
 .textStatsBold2 {
     font-size: 20px;
     color: white;
@@ -219,10 +239,12 @@ h6 {
     background-color: rgb(64, 64, 64);
     border-radius: 4px;
 }
+
 .progressBarFill {
     background-color: rgb(140, 140, 140);
     border-radius: 5px;
 }
+
 .progressKills {
     margin-bottom: 5px;
     height: 12px;
@@ -230,6 +252,7 @@ h6 {
     background-color: rgb(64, 64, 64);
     border-radius: 5px;
 }
+
 .progressHeadShots {
     margin-top: 5px;
     height: 12px;
@@ -255,18 +278,23 @@ h6 {
 /* //////////RESPONSIVE ////////////////////////////////////////// */
 /* ///////////////////////////////////////////////////////////// */
 @media only screen and (max-width: 425px) {
-    .playerCard {
+    .playerCardContainer {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    .cardPlayerPeak {
+    .cardSection1 {
         background-color: rgb(64, 64, 64);
         border-radius: 8px;
         width: 90%;
         height: 160px;
         margin: 2% 1%;
+    }
+
+    .cardSection2 {
+        width: 90%;
+        margin: 0 1%;
     }
 
     .peakImage {
@@ -285,12 +313,13 @@ h6 {
         border-radius: 8px;
     }
 
-    .statsContainer {
+    .statsSection1 {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
+
     .statsContainerB {
         display: flex;
         width: 90%;
@@ -305,7 +334,7 @@ h6 {
         width: 90%;
         margin: 4px;
     }
-    
+
     .stat {
         display: flex;
         flex-direction: column;
@@ -322,6 +351,7 @@ h6 {
         justify-content: center;
         align-items: center;
     }
+
     .statsContainer2B {
         display: flex;
         flex-direction: column;
