--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -45,11 +46,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 12px;
 }
+
+
+.SearchbarContainer2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 6px;
+}
+
+.inputContainer {
+  display: flex;
+  align-items: center;
+}
+
 
 .buttonSearch {
   border: none;
-  margin-left: 2%;
+  margin-left: 4%;
   border-radius: 4px;
   background-color: white;
   color: black;
@@ -62,4 +78,41 @@
 .buttonSearch:hover {
   background-color: rgb(197, 168, 1);
   color: white;
+}
+
+@media only screen and (max-width: 425px) {
+
+  .SearchbarContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 6px;
+  }
+
+  .SearchbarContainer2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6px;
+  }
+
+  .inputContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+  }
+
+  .buttonSearch {
+    border: none;
+    margin-left: 1%;
+    border-radius: 4px;
+    background-color: white;
+    color: black;
+    padding: 10px;
+    width: 100px;
+    font-weight: bold;
+    cursor: pointer;
+  }
 }
