--- a/src/css/playerCard.css
+++ b/src/css/playerCard.css
@@ -251,7 +251,7 @@ h6 {
     width: 24px;
     background-color: rgb(64, 64, 64);
     border-radius: 5px;
-}
+}Input
 
 .progressHeadShots {
     margin-top: 5px;
@@ -264,7 +264,7 @@ h6 {
 /*////////////////// SEARCH BAR ///////////////////////////////////////*/
 .searchtext {
     color: white;
-    padding: 8px 0 8px 0;
+    padding: 8px;
 }
 
 .Input {
@@ -347,9 +347,9 @@ h6 {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        padding: 12px 0;
         justify-content: center;
         align-items: center;
+        padding: 12px 0;
     }
 
     .statsContainer2B {
@@ -364,21 +364,16 @@ h6 {
 
     /*////////////////// SEARCH BAR ///////////////////////////////////////*/
 
-    .SearchbarContainer {
-        display: flex;
-        flex-direction: column;
-    }
-
     .searchtext {
-        color: white;
-        padding: 0;
-        margin-top: 12px;
-        margin-bottom: 0;
+        margin: 5px;
+        font-size: 1rem;
+        padding: 10px;
     }
 
     .Input {
-        margin: 20px;
-        padding: 12px;
+        width: 45%;
+        margin: 12px;
+        padding: 10px;
         border: 1px solid black;
         border-radius: 5px;
         height: 15px;
