--- a/src/css/playerCard.css
+++ b/src/css/playerCard.css
@@ -75,15 +75,6 @@
     padding: 0 10%;
 }
 
-.tierCardImage {
-    width: 80px;
-    border: 2px solid red;
-}
-
-.infoText {
-    margin: 4px;
-}
-
 .statsContainer {
     background-color: rgb(64, 64, 64);
     border-radius: 5px;
@@ -95,17 +86,32 @@
     align-items: center;
 }
 
-/* RANK IMAGE CONTAINER ////////////*/
+/* RANK IMAGE CONTAINER /////////////////////////////////////////////////////////*/
 .rankImageContainer {
     display: flex;
     align-items: center;
-    /* justify-content: space-evenly; */
+    margin-left: 3%;
+    margin-bottom: 2%;    
+}
+
+.rankImageContainer_B {
+    display: flex;
+}
+
+.textTier {
+    margin: 10px 0;
+    color: white;
+}
+
+.tierCardImage {
+    width: 80px;
+    
 }
 
 .percentileSection {
     display: flex;
     align-items: center;
-    margin-right: 50px;
+    margin-left: 15px;
 }
 
 /* // 4 Box Items at top.//////////////////////////////////////////////////////// */
@@ -116,7 +122,7 @@
     padding: 4px 0;
 }
 
-.statsContainerB {
+.statsContainer_B {
     display: flex;
     width: 50%;
     height: 80px;
@@ -190,12 +196,6 @@
 }
 
 .textStats2 {
-    display: flex;
-    color: white;
-}
-
-.textTier {
-    margin: 1%;
     display: flex;
     color: white;
 }
