fixed styling for match history page

--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,13 @@
   color: white;
 }
 
+.btnAppLocat {
+  padding: 10px;
+  width: 128px;
+}
+
+
+
 @media only screen and (max-width: 425px) {
 
   .SearchbarContainer {
