--- a/src/css/playerCard.css
+++ b/src/css/playerCard.css
@@ -6,28 +6,18 @@
     text-align: left;
     margin-left: 2%;
     padding-top: 8px;
+    margin-bottom: 0;
     color: white;
     text-decoration: underline 2px;
 }
 
-
 .cardSection2 {
-    /* background-color: rgb(64, 64, 64); */
     width: 80%;
     margin: 0 1%;
 }
 
-/* .cardPlayer {
-    width: 70%;
-    background-color: rgb(64, 64, 64);
-    margin: 0 1%;
-    height: 100vh;
-    border-radius: 8px;
-} */
-
 .gamertagContainer {
     display: flex;
-    /* justify-content: space-evenly; */
     justify-content: space-between;
     align-items: center;
     padding: 4px 0;
@@ -131,6 +121,24 @@
     margin: 10px 0;
     border-radius: 5px;
 }
+.playlistItem {
+    border: none;
+    padding: 15px;
+    background-color: rgb(82, 82, 82);
+    color: white;
+  
+    margin: 0 15px 0 15px;
+    border-radius: 2px;
+    font-size: 1rem;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+
+.playlistItem:hover {
+    background-color: rgb(197, 168, 1);
+    color: white;
+  }
 
 .statsContainer2B {
     display: flex;
